removed main pdf, cartoon pdf, and cartoon key, added atlas hi jet reco section

--- a/cuts_corrections.tex
+++ b/cuts_corrections.tex
@@ -19,7 +19,7 @@ A description of the analysis procedure to reconstruct the $\Dptr$ distribution,
 \label{Sec:JetSelection}
 Since the Inner Detector (ID) covers the $|\eta| < 2.5$, the analysis can 
 only be performed for jets within the pseudorapidity interval of $|\eta| < 1.7$ to have the entire $ r = $ 0.8 cone under investigation fully covered by the tracking detector. In both collision systems, jets are 
-measured with \ptjet\ between 126~GeV and 316~GeV in following four successive intervals: 126--158, 158--200, 200--251, and 251--316~GeV. This binning was motivated by the large fake rate below 100 \GeV. An underflow bin was also needed for the unfolding procedure, and hence, the measurement starts at 126 \GeV. This binning is also used in previous heavy ion jet measurements (\cite{PhysRevC.98.024908}). Truth jets were associated with the nearest reconstructed jet using the matching of $\dR<0.2$ for the performance study and to build response matrices for the unfolding procedure. The same \dR\ matching criteria were employed in previous ATLAS HI jet analyses and are justified by a detailed performance study~\cite{Aad:12081967v1}. To prevent nearby jets from distorting the measurement of \Dptr\ distributions, 
+measured with \ptjet\ between 126~GeV and 316~GeV in following four successive intervals: 126--158, 158--200, 200--251, and 251--316~GeV. This binning was motivated by the large fake rate below 100 \GeV. An underflow bin was also needed for the unfolding procedure, and hence, the measurement starts at 126 \GeV. This binning is also used in previous heavy ion jet measurements (\cite{PhysRevC.98.024908}). Truth jets were associated with the nearest reconstructed jet using the matching of $\dR<0.2$ for the performance study and to build response matrices for the unfolding procedure. The same \dR\ matching criteria were employed in previous ATLAS HI jet analyses and are justified by a detailed performance study~\cite{ATL-COM-PHYS-2011-1733}. To prevent nearby jets from distorting the measurement of \Dptr\ distributions, 
 jets are rejected if there is another jet with a higher \ptjet\ than the considered jet anywhere
 within a distance of $\Delta R < 1.0$. The isolation cut removes approximately 0.01\% of jets (see Figure \ref{fig:ISO}), and has almost no impact on the final measurement.
 
@@ -399,7 +399,7 @@ Here $N_{\mathrm{cones}}$ is the number of background cones associated with a gi
 \end{figure}
 
 
- \subparagraph{Correction for flow: }  Elliptic flow is the characteristic sinusoidal modulation of the yields of particles along the azimuth in heavy ion collisions. The maximum amplitude of the modulation determines the reaction plane, with more momenta being measured in plane than out of plane. Ref \cite{Aaboud2018} provides a basic measurement of the magnitude of the elliptic flow, and its \pt\ dependence. The correction for this effect was based on a parametrization of the \pTch and centrality dependence of previously measured elliptic flow coefficients, $v_{2}$ \cite{Aaboud2018}. The reaction plane angle $\Psi$ is estimated on an event-by-event basis by using the $\phi$ variation of transverse energy in the forward calorimeter. The correction factor is evaluated as a function of the distance of the jet from the reaction plane $\cos2(\phijet - \Psi)$. The correction is less (greater) than unity for jets in a direction perpendicular (parallel) to the reaction plane. Jets perpendicular (parallel) to the plane typically have a lower (higher) UE, and a cone at a random position in the ID is corrected down (up). The size of the correction is at the level of a few percent, and decreases with increasing track \pt, as is shown in Fig.\ref{fig:flow_corr}
+ \subparagraph{Correction for flow: }  Elliptic flow is the characteristic sinusoidal modulation of the yields of particles along the azimuth in heavy ion collisions. The maximum amplitude of the modulation determines the reaction plane, with more momenta being measured in plane than out of plane. Ref \cite{Aaboud:2018ves} provides a basic measurement of the magnitude of the elliptic flow, and its \pt\ dependence. The correction for this effect was based on a parametrization of the \pTch and centrality dependence of previously measured elliptic flow coefficients, $v_{2}$ \cite{Aaboud:2018ves}. The reaction plane angle $\Psi$ is estimated on an event-by-event basis by using the $\phi$ variation of transverse energy in the forward calorimeter. The correction factor is evaluated as a function of the distance of the jet from the reaction plane $\cos2(\phijet - \Psi)$. The correction is less (greater) than unity for jets in a direction perpendicular (parallel) to the reaction plane. Jets perpendicular (parallel) to the plane typically have a lower (higher) UE, and a cone at a random position in the ID is corrected down (up). The size of the correction is at the level of a few percent, and decreases with increasing track \pt, as is shown in Fig.\ref{fig:flow_corr}
  
  \begin{figure}[ht]
 \centerline{ \includegraphics[width=0.45 \textwidth]{figures/main/UE/flow_correction.pdf} }
