--- a/jets.tex
+++ b/jets.tex
@@ -169,6 +169,7 @@ This is typically taken as part of the fragmentation modification as:
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Jet Algorithms}
+\label{sec:jet_algo}
 Jet algorithms map the momenta of final state particles into the momenta of jets, and form a core component of any jet measurement.
 They can be broadly categorized as sequential recombination and cone algorithms \cite{Atkin_2015}. 
 
