--- a/macros.tex
+++ b/macros.tex
@@ -210,8 +210,8 @@
 %\newcommand{\etatrk}{\mbox{$\eta^{\mathrm{trk}}$}}
 \newcommand{\etatrk}{\mbox{$\eta^{\mathrm{ch}}$}}
 \newcommand{\ptpart}{\mbox{$p_{\mathrm{T}}^{\mathrm{part}}$}}
-\newcommand{\pttruth}{\mbox{$p_{\mathrm{T}}^{\mathrm{reco}}$}}
-\newcommand{\ptreco}{\mbox{$p_{\mathrm{T}}^{\mathrm{truth}}$}}
+\newcommand{\pttruth}{\mbox{$p_{\mathrm{T}}^{\mathrm{truth}}$}}
+\newcommand{\ptreco}{\mbox{$p_{\mathrm{T}}^{\mathrm{reco}}$}}
 %\newcommand{\etapart}{\mbox{$\eta^{part}$}}
 \newcommand{\ystar}{\mbox{$y^{*}_{\mathrm{jet}}$}}
 \newcommand{\yjet}{\mbox{$y^{\mathrm{jet}}$}}
