--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,6 +1,20 @@
 % !TEX root = thesis-ex.tex
 % !TEX encoding = UTF-8 Unicode
 
+@techreport{Cole:1450219,
+author        = "Cole, B and Spousta, M and Angerami, A and Kosek, T and
+Balek, P and Rybar, M and Santos, H",
+title         = "{Jet Fragmentation in Heavy Ion Collisions}",
+institution   = "CERN",
+address       = "Geneva",
+number        = "ATL-COM-PHYS-2012-628",
+month         = "May",
+year          = "2012",
+reportNumber  = "ATL-COM-PHYS-2012-628",
+url           = "https://cds.cern.ch/record/1450219",
+}
+
+
 @techreport{Potamianos:2209070,
 author        = "Potamianos, Karolos",
 title         = "{The upgraded Pixel detector and the commissioning of the
@@ -4033,6 +4047,19 @@ Year = {2013},
   }
 
 
+@online{perfPlots,
+author = "{ATLAS Collaboration}",
+title = "Performance plots for \pp\ and \pbpb\ collisions at $\sqrtsnn = 5.02$ TeV",
+note = {https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PLOTS/HION-2015-001/},
+}
+
+
+@online{atlasRun1EventDisplay,
+author = "{ATLAS Collaboration}",
+title = "ATLAS Event Displays from 2010 Heavy Ion Collisions",
+note = {https://twiki.cern.ch/twiki/bin/view/AtlasPublic/EventDisplayHeavyIonCollisions},
+}
+
   @online{JERTool,
   Author = {Varouchas, Dimitri},
   Title = {JetResolution2015Prerecom},
@@ -4144,18 +4171,6 @@ Year = {2013},
   reportNumber  = "ATL-COM-PHYS-2016-1287",
   nourl           = "https://cds.cern.ch/record/2212936",
   }
-
-
-  @Article{Aad:12081967v1,
-  author      = "{ATLAS Collaboration}",
-  title        = "{Performance of Jet Reconstruction in Heavy Ion Collisions}",
-  institution  = "",
-  address      = "",
-  month        = "",
-  year         = "2012",
-  note  = "ATL-COM-PHYS-2011-1733, https://cds.cern.ch/record/1409453",
-  }
-
 
   @techreport{cc2015,
   author        = "Puri, Akshat",
@@ -4283,22 +4298,6 @@ Year = {2013},
   }
 
 
-  @article{Aaboud2018,
-  author= "{ATLAS Collaboration}",
-  title="Measurement of the azimuthal anisotropy of charged particles produced in $\sqrt{s_{NN}} = 5.02$~TeV Pb+Pb collisions with the ATLAS detector",
-  collaboration  = "ATLAS",
-  journal        = "Eur. Phys. J.",
-  volume         = "C78",
-  year           = "2018",
-  number         = "12",
-  pages          = "997",
-  doi            = "10.1140/epjc/s10052-018-6468-7",
-  eprint         = "1808.03951",
-  archivePrefix  = "arXiv",
-  primaryClass   = "nucl-ex",
-  reportNumber   = "CERN-EP-2018-194",
-  SLACcitation   = "%%CITATION = ARXIV:1808.03951;%%"
-  }
 
   @Unpublished{ATLAS-COM-PHYS-2011-1733,
   author       = "Angerami, A. and Cole, B. and Perepelitsa, D. and Balek, P. and Kosek, T. and Rybar, M. and Spousta, M.  and Galan, A. and Santos, H.",
