--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -132,21 +132,21 @@ For my Mother, Father, and Brother
 %\chapter{Introduction}
 %\label{sec:intro}
 %\input{thesisintro.tex}
-
-\chapter{Introduction}
-\label{sec:theory}
-\input{theory.tex}
-\clearpage
-
-\chapter{Major Jet Measurements}
-\label{sec:jetMeasurements}
-\input{jetMeasurements.tex}
-\clearpage
-
-\chapter{Jet Energy Loss Models}
-\label{sec:jetModels}
-\input{jetModels.tex}
-\clearpage
+%
+%\chapter{Introduction}
+%\label{sec:theory}
+%\input{theory.tex}
+%\clearpage
+%
+%\chapter{Major Jet Measurements}
+%\label{sec:jetMeasurements}
+%\input{jetMeasurements.tex}
+%\clearpage
+%
+%\chapter{Jet Energy Loss Models}
+%\label{sec:jetModels}
+%\input{jetModels.tex}
+%\clearpage
 
 \chapter{LHC and the ATLAS Detector}
 \label{sec:setup}
