--- a/setup.tex
+++ b/setup.tex
@@ -243,8 +243,12 @@ This event rate is further reduced to 200 Hz by the HLT that uses the full granu
 %\FloatBarrier
 
 
-\section{Centrality Determination in ATLAS}
+\section{Pileup and Centrality in ATLAS}
 \input{centrality.tex}
 
 \section{Jet Reconstruction for Heavy Ion Collisions in ATLAS}
 \input{jet_reconstruction.tex}
+
+\section{Jet Calibration for Heavy Ion Collisions in ATLAS}
+\input{jet_calibration.tex}
+
