--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -2413,21 +2413,43 @@ reportNumber   = "CERN-EP-2018-194",
 SLACcitation   = "%%CITATION = ARXIV:1808.03951;%%"
 }
 
-@Article{Aad2014, 
-author="{ATLAS Collaboration}",
-title="Measurement of flow harmonics with multi-particle cumulants in Pb+Pb collisions at $\sqrt{{s}_{NN}}=2.76$ TeV with the ATLAS detector",
-journal="The European Physical Journal C",
-year="2014",
-month="Nov",
-day="26",
-volume="74",
-number="11",
-pages="3157",
-issn="1434-6052",
-doi="10.1140/epjc/s10052-014-3157-z",
-url="https://doi.org/10.1140/epjc/s10052-014-3157-z"
+@article{ATLAS:2011ah,
+author         = "Aad, Georges and others",
+title          = "{Measurement of the pseudorapidity and transverse
+momentum dependence of the elliptic flow of charged
+particles in lead-lead collisions at $\sqrt{s_{NN}}=2.76$
+TeV with the ATLAS detector}",
+collaboration  = "ATLAS",
+journal        = "Phys. Lett.",
+volume         = "B707",
+year           = "2012",
+pages          = "330-348",
+doi            = "10.1016/j.physletb.2011.12.056",
+eprint         = "1108.6018",
+archivePrefix  = "arXiv",
+primaryClass   = "hep-ex",
+reportNumber   = "CERN-PH-EP-2011-124",
+SLACcitation   = "%%CITATION = ARXIV:1108.6018;%%"
 }
 
+@Article{Aad2014, 
+author="{ATLAS Collaboration}",
+title          = "{Measurement of flow harmonics with multi-particle
+cumulants in Pb+Pb collisions at $\sqrt{s_{\mathrm
+{NN}}}=2.76$  TeV with the ATLAS detector}",
+collaboration  = "ATLAS",
+journal        = "Eur. Phys. J.",
+volume         = "C74",
+year           = "2014",
+number         = "11",
+pages          = "3157",
+doi            = "10.1140/epjc/s10052-014-3157-z",
+eprint         = "1408.4342",
+archivePrefix  = "arXiv",
+primaryClass   = "hep-ex",
+reportNumber   = "CERN-PH-EP-2014-171",
+SLACcitation   = "%%CITATION = ARXIV:1408.4342;%%"
+}
 
 
 @article{PhysRevC.88.044910,
@@ -4051,6 +4073,7 @@ Year = {2013},
 author = "{ATLAS Collaboration}",
 title = "Performance plots for \pp\ and \pbpb\ collisions at $\sqrtsnn = 5.02$ TeV",
 note = {https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PLOTS/HION-2015-001/},
+nourldate = {2019-06-20},
 }
 
 
@@ -4058,6 +4081,7 @@ note = {https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PLOTS/HION-2015-001/},
 author = "{ATLAS Collaboration}",
 title = "ATLAS Event Displays from 2010 Heavy Ion Collisions",
 note = {https://twiki.cern.ch/twiki/bin/view/AtlasPublic/EventDisplayHeavyIonCollisions},
+nourldate = {2019-06-20},
 }
 
   @online{JERTool,
