--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -129,10 +129,10 @@ For my Mother, Father, and Brother
 \mainmatter
 %-------------------------------------------------------------------------------
 
-%\chapter{Introduction}
-%\label{sec:intro}
-%\input{thesisintro.tex}
-%
+\chapter{Introduction}
+\label{sec:intro}
+\input{thesisintro.tex}
+
 \chapter{Introduction}
 \label{sec:theory}
 \input{theory.tex}
@@ -148,7 +148,7 @@ For my Mother, Father, and Brother
 \input{jetModels.tex}
 \clearpage
 
-\chapter{LHC and the ATLAS Detector}
+\chapter{Experimental Setup}
 \label{sec:setup}
 \input{setup.tex}
 \clearpage
